# android_kernel_curtana

./: Makefile
drivers/staging/qcacld-3.0/: Kbuild
techpack/: Kbuild
techpack/audio/: Makefile
techpack/audio/4.0/: Makefile  Makefile.am
techpack/audio/asoc/codecs/: Kbuild
techpack/audio/dsp/: q6_init.c
